@startuml
hide methods
left to right direction
skinparam classAttributeIconSize 0

class Employee {
  -id
  -name
  -email
  -phone
  -address
  -citizenCardNumber
  -roleId
}

class Nurse {}

class Receptionist {}

class VaccinationCenter {
  - name
  - address
  - emailAddress
  - phoneNumber
  - faxNumber
  - websiteAddress
  - openingHours
  - closingHours
  - slotDuration
  - maximumVaccinesPerSlot
}

class WaitingRoom {}

class SNSUser {
  - citizenCard
  - snsNumber
  - birthDay
  - gender
  - phoneNumber
  - address
}

class Company {}

class Appointment {
  -appointmentDate

}

Employee <|-- Nurse
Employee <|-- Receptionist

VaccinationCenter "1" -- "1" WaitingRoom : has >
WaitingRoom "1" -- "*" SNSUser : waits <

Nurse "1" -- "*" WaitingRoom : consults list >
Receptionist "1" -- "*" WaitingRoom : sends to >

Company "1" -- "*" VaccinationCenter : knows > 
Company "1" -- "*" SNSUser : knows > 
Company "1" -- "*" Employee : knows > 

SNSUser "1" -- "*" Appointment : schedules >
Appointment "*" -- "1" VaccinationCenter : is held >

@enduml
